--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 appdirs==1.4.3
 beautifulsoup4==4.8.1
+boto3==1.10.46
+botocore==1.13.46
 bs4==0.0.1
 certifi==2019.9.11
 chardet==3.0.4
@@ -12,14 +14,20 @@ django-bootstrap4==1.0.1
 django-detect==1.0.16
 django-el-pagination==3.2.4
 django-six==1.0.4
+django-storages==1.8
+docutils==0.15.2
 gunicorn==20.0.4
 idna==2.8
+jmespath==0.9.4
 Pillow==6.2.0
 psycopg2-binary==2.8.4
+python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
+s3transfer==0.2.1
 selenium==3.141.0
 simplejson==3.16.0
+six==1.13.0
 soupsieve==1.9.4
 sqlparse==0.3.0
 tqdm==4.36.1
